force-app/main/default/objects/ssot__PromotionItemEngagement__dlm/fields/ssot__ContentSlotName__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContentSlotName__c</fullName>
    <label>Content Slot</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ContentSlotName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>