force-app/main/default/objects/ssot__PromotionItemEngagement__dlm/fields/ssot__DigitalContentName__c.field-meta.xml
<CustomField>
    <fullName>ssot__DigitalContentName__c</fullName>
    <label>Digital Content Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DigitalContentName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>