force-app/main/default/objects/ssot__PromotionItemEngagement__dlm/fields/ssot__ItemCategory2Name__c.field-meta.xml
<CustomField>
    <fullName>ssot__ItemCategory2Name__c</fullName>
    <label>Item Category 2</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ItemCategory2Name</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>