force-app/main/default/objects/ssot__PromotionItemEngagement__dlm/fields/ssot__ItemIndexNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__ItemIndexNumber__c</fullName>
    <label>Item Index Number</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ItemIndexNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>