force-app/main/default/objects/ssot__PromotionItemEngagement__dlm/fields/ssot__ItemQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__ItemQuantity__c</fullName>
    <label>Item Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ItemQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>