force-app/main/default/objects/ssot__PromotionItemEngagement__dlm/fields/ssot__rel_1732260227124_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1732260227124_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PromotionItemEngagement_LocationId_m_rel</label>
    <referenceTo>ssot__Location__dlm</referenceTo>
    <relationshipLabel>PromotionItemEngagement_LocationId_m_rel</relationshipLabel>
    <relationshipName>rel_1732260227124_end</relationshipName>
    <type>Lookup</type>
</CustomField>